styles.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background: url('resources/Background_image.svg') #121826;
    font-family: "Outfit", sans-serif;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    padding: 20px;
}

.container {
    min-height: 100vh;
    height: auto;
    color: #E5E7EB;
}

.container h1, .sub-title {
    text-align: center;
}

.hero-title {
    line-height: 1.4;
    font-size: 2.5rem;
    font-weight: 600;
}

.sub-title {
    margin-top: 20px;
    color: #9DA3AE;
    font-size: 1.25rem;
    font-weight: 500;
}

p {
    color: #9DA3AE;
}

.hero-title .line {
    display: block;
}

.card-section {
    margin-top: 30px;
    width: 100%;
    display: flex;
    gap: 20px;
    align-items: center;
    justify-content: center;
}

.card {
    background: #212936;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 20px;
    padding: 20px;
    width: 300px;
    border-radius: 15px;
}

.card .card-img {
    width: 100%;
    border-radius: 10px;
}

.icon {
    
    display: flex;
    border-radius: 50%;
    width: 50px;
    height: 50px;
    align-items: center;
    justify-content: center;
}

.first {
    background: #FCEED8;
}


.second {
    background: #DEE9FC;
}


.third {
    background: #FBE5E6;
}




@media (max-width: 740px) {

    .card-section 
    {
        flex-direction: column;
    }

   .hero-title .line {
        display: inline;
    }

    
}





.author-info
{
    font-size: 14px;
    text-align: center;
    margin-top: 16px;
    color: rgb(55, 65, 81);
}

.author-info a {
    text-decoration: none;
}

